# matrix

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: release.yml
inc/: hashFunction.hpp  matrix.hpp
src/: main.cpp
test/: main.cpp
